--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --clr-red-01: #E60000;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
