--- a/app/src/index.css
+++ b/app/src/index.css
@@ -9,18 +9,42 @@
   --clr-white-01: #FFF;
 }
 
+html,
 body {
+  height: 100vh;
+  min-height: 100vh;
+}
+
+html {
+  height: 100%;
+
+  overflow: hidden;
+}
+
+body {
+  height: 100vh;
+  min-height: 100vh;
   margin: 0;
+
+  font-weight: 500;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  font-weight: 500;
+}
+body > div {
+  height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  display: grid;
+  grid-template-areas:
+            "header"
+            "content";
 }
