--- a/app/src/pages/dashboard/Dashboard.css
+++ b/app/src/pages/dashboard/Dashboard.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  width: 100vw;
 }
 
 .dashboard-header,
@@ -14,8 +15,11 @@
 
 /* Website header */
 .dashboard-header {
+  align-items: center;
+  grid-area: header;
+  height: 100px;
   justify-content: space-between;
-  padding: 19px 29px;
+  padding: 0 29px;
 }
 
 /* Website menu */
@@ -31,15 +35,24 @@
 }
 
 /* Website content */
-.dashboard-content {}
+.dashboard-content {
+  grid-area: content;
+  height: calc(100vh - 100px);
+}
+.dashboard-content > section {
+  overflow-y: scroll;
+  padding: 68px 107px;
+}
 
 /* Website aside menu */
 .dashboard-aside {
   align-items: center;
   display: flex;
+  flex: 0;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: space-evenly;
+  padding: 0 0 69px 0;
 }
 .dashboard-aside ul {
   display: flex;
@@ -52,13 +65,7 @@
   border-radius: 6px;
 
   height: 64px;
-  width: 64px;
-}
-.dashboard-aside li {
-  background-color: var(--clr-white-01);
-  border-radius: 6px;
-
-  height: 64px;
+  margin: 0 27px 0 26px;
   position: relative;
   width: 64px;
 }
@@ -71,7 +78,6 @@
 }
 .dashboard-aside small {
   display: inline-block;
-  margin-bottom: 69px;
 
   font-size: 12px;
   font-weight: 500;
