--- a/app/src/components/AverageSessions/AverageSessions.css
+++ b/app/src/components/AverageSessions/AverageSessions.css
@@ -1,9 +1,25 @@
 .average-sessions {
   background-color: var(--clr-red-01);
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 .average-sessions h3 {
   color: var(--clr-white-01);
+  font-size: 15px;
+  line-height: 24px;
+
+  flex: 1;
+  margin: 29px 34px 0 34px;
+}
+.average-sessions > div {
+  font-size: 12px;
 }
 .average-sessions .linechart-tooltip {
   background-color: var(--clr-white-01);
+  font-size: 8px;
+  text-align: center;
+
+  padding: 7px;
 }
