--- a/app/src/components/Score/Score.css
+++ b/app/src/components/Score/Score.css
@@ -1,6 +1,16 @@
 .user-score {
-  background-color: var(--clr-white-01);
+  background-color: var(--clr-white-02);
+  line-height: 26px;
 }
 .user-score {
 
+}
+
+/* User score: legend */
+.user-score-legend {
+  color: var(--clr-black-03);
+  font-size: 15px;
+  line-height: 24px;
+
+  margin: 24px 30px 0;
 }
