--- a/app/src/pages/dashboard/Dashboard.css
+++ b/app/src/pages/dashboard/Dashboard.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  /* width: 100vw; */
+  width: 100vw;
 }
 
 .dashboard-header,
@@ -89,13 +89,32 @@
 /* Website board */
 .dashboard-board {
   display: flex;
-  flex-direction: row;
   flex-wrap: nowrap;
+}
+@media (max-width: 1350px) {
+  .dashboard-board {
+    flex-direction: column;
+  }
+}
+@media (min-width: 1351px) {
+  .dashboard-board {
+    flex-direction: row;
+  }
 }
 
 /* Website board : indicators */
 .dashboard-board .dashboard-graphs {
   flex: 1;
+}
+@media (max-width: 1350px) {
+  .dashboard-board .dashboard-graphs {
+    order: 1;
+  }
+}
+@media (min-width: 1351px) {
+  .dashboard-board .dashboard-graphs {
+    order: 0;
+  }
 }
 
 /* Website board : daily-activity */
@@ -107,11 +126,23 @@
 /* Website board : indicators */
 .dashboard-board .dashboard-indicators {
   display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   gap: 39px;
-  margin-left: 31px;
   margin-top: 77px;
+}
+@media (max-width: 1350px) {
+  .dashboard-board .dashboard-indicators {
+    order: 0;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+@media (min-width: 1351px) {
+  .dashboard-board .dashboard-indicators {
+    order: 1;
+    flex-direction: column;
+    margin-left: 31px;
+  }
 }
 
 /* Website board : details */
