--- a/app/src/components/Indicators/Indicator.css
+++ b/app/src/components/Indicators/Indicator.css
@@ -1,10 +1,19 @@
 .indicator {
+  background-color: var(--clr-white-02);
+
   display: flex;
   flex-direction: row;
-  background-color: var(--clr-white-02);
   padding: 32px;
 }
-.indicator .icon-container {
+@media (max-width: 1350px) {
+  .indicator {
+    flex: 1 0 calc(50% - 2*32px - 40px);
+  }
+}
+@media (min-width: 1351px) {
+  .indicator {
+    flex: 1;
+  }
 }
 
 .indicator .informations {
