debug css margin on img header

--- a/app/src/pages/dashboard/Dashboard.css
+++ b/app/src/pages/dashboard/Dashboard.css
@@ -20,7 +20,7 @@
   height: var(--header-height);
   justify-content: space-between;
 }
-.dashboard img {
+.dashboard-header img {
   margin-left: 29px;
 }
 
